[package]
name = "fa2"
version = "0.1.0"
edition = "2021"
authors = [
  "Guillaume Plique <guillaume.plique@sciencespo.fr>"
]
description = "Rust implementation of the Force Atlas 2 graph layout algorithm."
documentation = "https://github.com/graphology/rust-fa2#readme"
homepage = "https://github.com/graphology/rust-fa2"
repository = "https://github.com/graphology/rust-fa2"
readme = "README.md"
keywords = ["graph", "layout", "forceatlas"]
license = "MIT"

[dependencies]
num = "0.4.3"

[dev-dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
rand = "0.9.2"
simd-csv = "0.10.2"
